AC_INIT( libiqxmlrpc/value.h )
AM_INIT_AUTOMAKE( libiqxmlrpc, 0.2.1 )
AM_CONFIG_HEADER( config.h )

LIBIQXMLRPC_VERSION=0:0:0
AC_SUBST(LIBIQXMLRPC_VERSION)

# GENERIC_LIBRARY_VERSION=X:Y:Z
#                         | | |
#                  +------+ | +---+
#                  |        |     |
#               current:revision:age
#                  |        |     |
#                  |        |     +- increment if interfaces have been added
#                  |        |        set to zero if interfaces have been removed
#                  |        |        or changed
#                  |        +- increment if source code has changed
#                  |           set to zero if current is incremented
#                  +- increment if interfaces have been added, removed or changed


dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_LANG_CPLUSPLUS
AC_PROG_LIBTOOL

INCLUDES='-I${top_srcdir}'
CXXFLAGS="-O2"

AC_ARG_ENABLE( debug,
  [  --enable-debug   enables adding debug info into binaries],
  [CXXFLAGS="$CXXFLAGS -ggdb"] )

AC_CHECK_FUNCS(poll)

AC_CHECK_LIB(crypto, main, true, AC_MSG_ERROR([libcrypto not found]))
AC_CHECK_LIB(ssl, main, true, AC_MSG_ERROR([libssl not found]))
OPENSSL="-lcrypto -lssl"
AC_SUBST(OPENSSL)

INCLUDES="$INCLUDES `pkg-config --cflags libxml++-1.0`"
LDFLAGS="$LDFLAGS `pkg-config --libs-only-L libxml++-1.0`"
LIBXMLPP=`pkg-config --libs-only-l libxml++-1.0`
AC_SUBST(LIBXMLPP)

test "-z" "${LIBXMLPP}" && AC_MSG_ERROR([No pkg-config configuration for libxml++-1.0])

AC_SUBST(CXXFLAGS)
AC_SUBST(INCLUDES)
AC_SUBST(LDFLAGS)

AC_OUTPUT(
  Makefile
  libiqxmlrpc/Makefile
  tests.libiqnet/Makefile
  tests/Makefile
  doc/Makefile
  doc/libiqxmlrpc.doxygen
  libiqxmlrpc.pc
  libiqxmlrpc.spec
)
