AC_INIT( libiqxmlrpc/value.h )
AM_INIT_AUTOMAKE( libiqxmlrpc, 0.6.1 )
AM_CONFIG_HEADER( config.h )

LIBIQXMLRPC_VERSION=0:0:0
AC_SUBST(LIBIQXMLRPC_VERSION)

# GENERIC_LIBRARY_VERSION=X:Y:Z
#                         | | |
#                  +------+ | +---+
#                  |        |     |
#               current:revision:age
#                  |        |     |
#                  |        |     +- increment if interfaces have been added
#                  |        |        set to zero if interfaces have been removed
#                  |        |        or changed
#                  |        +- increment if source code has changed
#                  |           set to zero if current is incremented
#                  +- increment if interfaces have been added, removed or changed


dnl Checks for programs.
#CXX=/usr/local/bin/g++

AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_LANG_CPLUSPLUS
AC_PROG_LIBTOOL

INCLUDES='-I${top_srcdir}'
CXXFLAGS="-O2 -Wall"

AC_ARG_ENABLE( debug,
  [  --enable-debug   enables adding debug info into binaries],
  [CXXFLAGS="$CXXFLAGS -ggdb"] )

AC_ARG_ENABLE( profile,
  [  --enable-profile enables support for gprof],
  [CXXFLAGS="$CXXFLAGS -pg -fprofile-arcs"] )

AC_CHECK_FUNCS(poll)

PKG_CHECK_MODULES( OPENSSL, openssl,, 
  [ AC_CHECK_HEADER( openssl/ssl.h, OPENSSL_LIBS="-lcrypto -lssl", 
                   AC_MSG_ERROR([openssl library not found.]) ] )
)

INCLUDES="$INCLUDES ${OPENSSL_CFLAGS}"
LDFLAGS="$LDFLAGS ${OPENSS_LDFLAGS}"
AC_SUBST(OPENSSL_LIBS)

PKG_CHECK_MODULES( LIBXMLPP, libxml++-1.0 )
INCLUDES="$INCLUDES ${LIBXMLPP_CFLAGS}"
LDFLAGS="$LDFLAGS ${LIBXMLPP_LDFLAGS}"
AC_SUBST(LIBXMLPP_LIBS)

AC_SUBST(CXXFLAGS)
AC_SUBST(INCLUDES)
AC_SUBST(LDFLAGS)

AC_OUTPUT(
  Makefile
  libiqxmlrpc/Makefile
  libiqxmlrpc/version.h
  tests/Makefile
  doc/Makefile
  win32/Makefile
  win32/res/Makefile
  doc/libiqxmlrpc.doxygen
  libiqxmlrpc.pc
  libiqxmlrpc-server.pc
  libiqxmlrpc-client.pc
  libiqxmlrpc.spec
)
