AC_PREREQ([2.59])
AC_INIT([libiqxmlrpc], [0.8.7], [adedov@users.sourceforge.net])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([libiqxmlrpc/value.h])
AM_CONFIG_HEADER(config.h)

LIBIQXMLRPC_VERSION=0:0:0
AC_SUBST(LIBIQXMLRPC_VERSION)

AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_LANG_CPLUSPLUS
AC_PROG_LIBTOOL

AX_BOOST_BASE([1.32.0])
AX_BOOST_THREAD
AX_BOOST_PROGRAM_OPTIONS
AX_BOOST_UNIT_TEST_FRAMEWORK

INCLUDES='-I${top_srcdir}'
CXXFLAGS="-Wall ${BOOST_CPPFLAGS}"
LDFLAGS=""
MAKEDOCS="yes"

AC_ARG_ENABLE( debug,
  [  --enable-debug   enables adding debug info into binaries],
  [case ${enableval} in
   yes)
     CXXFLAGS="$CXXFLAGS -g -O0" ;;
   *)
     CXXFLAGS="$CXXFLAGS -O2" ;;
   esac],
  [CXXFLAGS="$CXXFLAGS -O2"])

AC_ARG_ENABLE( docs,
  [  --disable-docs   prevents building/installing documentation],
  [ MAKEDOCS=${enableval} ] )

AC_CHECK_FUNCS(poll)

PKG_CHECK_MODULES( OPENSSL, openssl,, [
    AC_CHECK_HEADER( openssl/ssl.h, 
      OPENSSL_LIBS="-lcrypto -lssl", AC_MSG_ERROR([openssl library not found.])) 
  ]
)
INCLUDES="${INCLUDES} ${OPENSSL_CFLAGS}"
LDFLAGS="${LDFLAGS} ${OPENSS_LIBS}"
AC_SUBST(OPENSSL_LIBS)

PKG_CHECK_MODULES( LIBXMLPP, libxml++-1.0 )
INCLUDES="${INCLUDES} ${LIBXMLPP_CFLAGS}"
LDFLAGS="${LDFLAGS} ${LIBXMLPP_LIBS}"
AC_SUBST(LIBXMLPP_LIBS)

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(CXXFLAGS)
AC_SUBST(INCLUDES)
AC_SUBST(LDFLAGS)
AC_SUBST(BOOST_THREAD_LIB)
AC_SUBST(MAKEDOCS)

AC_OUTPUT(
  Makefile
  libiqxmlrpc/Makefile
  libiqxmlrpc/version.h
  tests/Makefile
  debian/Makefile
  doc/Makefile
  doc/libiqxmlrpc.doxygen
  win32/Makefile
  libiqxmlrpc.pc
  libiqxmlrpc-server.pc
  libiqxmlrpc-client.pc
  libiqxmlrpc.spec
)
